--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
         env:
           ALPACA_API_KEY: ${{ secrets.ALPACA_API_KEY }}  # Store your secrets in GitHub
           ALPACA_SECRET_KEY: ${{ secrets.ALPACA_SECRET_KEY }}
-          HOLIDAY_API_KEY: ${{ secrets.HOLIDAY_API_KEY }}  # Store your holiday API key in GitHub
+          POLYGON_API_KEY: ${{ secrets.POLYGON_API_KEY }}  # Store your Polygon API key in GitHub
         run: |
           stock market project.py
